added context menu for row deletion

--- a/dev/index.html
+++ b/dev/index.html
@@ -92,6 +92,7 @@
 <script type="text/javascript" src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script type="text/javascript" src="../bower_components/angular-elastic/elastic.js"></script>
 <script type="text/javascript" src="../bower_components/angular-translate/angular-translate.min.js"></script>
+<script type="text/javascript" src="../bower_components/ng-context-menu/dist/ng-context-menu.min.js"></script>
 
 <script type="text/javascript" src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script type="text/javascript" src="../bower_components/jquery-mousewheel/jquery.mousewheel.min.js"></script>
