fixed the paging on search update, also made some mockups

--- a/js/treatment/treatment.tpl.html
+++ b/js/treatment/treatment.tpl.html
@@ -1,3 +1,4 @@
+<div class="row">
 <div class="col-xs-12 treatment mandator-{{::treatment.mandator}}"
      ng-class="::{secondary: !treatment.isMainTreatment, closed: treatment.closed || treatment.billed}" tabindex="-1">
 <div class="panel" ng-class="::treatment.type=='success' ? 'panel-success' : 'panel-default'">
@@ -320,6 +321,7 @@
         </li>
 
     </ul>
+</div>
 </div>
 </div>
 </div>
