--- a/dev/index.html
+++ b/dev/index.html
@@ -36,23 +36,28 @@
         </div>
     </div>
 </div>
-<div class="container-fluid" ng-class="[marginSetting, fontSetting]" ng-controller="MainController as vm">
-    <treatment-toolbar></treatment-toolbar>
+<div class="container-fluid">
+    <div class="row-fluid">
+        <div class="col-sm-8 treatments" ng-class="[marginSetting, fontSetting]" ng-controller="MainController as vm">
+            <div class="panel panel-default">
 
-    <title-settings-widget></title-settings-widget>
+                <treatment-toolbar></treatment-toolbar>
 
-    <advanced-search-widget search="vm.search"></advanced-search-widget>
+                <title-settings-widget></title-settings-widget>
 
-    <text-block-widget></text-block-widget>
+                <advanced-search-widget search="vm.search"></advanced-search-widget>
 
-    <create-preset-widget></create-preset-widget>
+                <text-block-widget></text-block-widget>
 
-    <replace-preset-widget></replace-preset-widget>
+                <create-preset-widget></create-preset-widget>
 
-    <preset-settings-widget></preset-settings-widget>
+                <replace-preset-widget></replace-preset-widget>
 
-    <treatment treatment="treatment" editable="{{false && (!currentPage || currentPage<2) }}" index="{{$index}}"
-               ng-repeat="treatment in vm.filteredTreatments = (vm.treatments |
+                <preset-settings-widget></preset-settings-widget>
+
+                <treatment treatment="treatment" editable="{{false && (!currentPage || currentPage<2) }}"
+                           index="{{$index}}"
+                           ng-repeat="treatment in vm.filteredTreatments = (vm.treatments |
                             filter:vm.search.text |
                             filter:{subject:vm.search.subject} |
                             filter:{userToken:vm.search.user} |
@@ -61,20 +66,93 @@
                             compareDate:vm.search.dateFrom:'after' |
                             compareDate:vm.search.dateTo:'before' |
                             attachments:vm.search.attachments |
-                            orderBy:[(vm.reverse?'':'-')+'date', 'id'] |
-                            limitTo:vm.limit:(currentPage? vm.limit*(currentPage-1) : 0) ) "
-               treatmentlist="vm.treatments" user="::vm.user"></treatment>
+                            orderBy:[(vm.reverse?'':'-')+'date', 'id']) |
+                            limitTo:vm.limit:(currentPage? vm.limit*(currentPage-1) : 0) "
+                           treatmentlist="vm.treatments" user="::vm.user"></treatment>
 
 
-    <div class="col-xs-12 centered" ng-hide="vm.limit == vm.treatments.length || !vm.treatments" ng-cloak>
-        <div class="panel">
-            <div class="panel-body">
-                <div class="btn-group">
-                    <pagination total-items="vm.treatments.length" items-per-page="vm.limit" ng-model="currentPage" ng-change="pageChanged()"></pagination>
+                <div class="row">
+
+                    <div class="col-xs-12 centered" ng-hide="vm.limit == vm.filteredTreatments.length || !vm.filteredTreatments"
+                         ng-cloak>
+                        <div class="panel">
+                            <div class="panel-body">
+                                <div class="btn-group">
+                                    <pagination total-items="vm.filteredTreatments.length" items-per-page="vm.limit"
+                                                ng-model="currentPage" ng-change="pageChanged()"></pagination>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+        <div class="col-sm-4 sidebar">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="panel panel-primary ">
+                        <div class="panel-heading">
+                            <h4>Medi-Liste</h4>
+                        </div>
+                        <div class="list-group">
+                            <a href class="list-group-item">Ein Medi</a>
+                            <a href class="list-group-item">Ein anderes Medi</a>
+                            <a href class="list-group-item">Ein drittes Medi</a>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="panel panel-info">
+                        <div class="panel-heading">
+                            <h4>Biometrische Daten</h4>
+                        </div>
+                        <div class="list-group">
+                            <a href class="list-group-item">
+                                <div class="row">
+                                    <div class="col-xs-6">
+                                        <p>Puls</p>
+                                    </div>
+                                    <div class="col-xs-6">
+                                        <p>normal</p>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href class="list-group-item">
+                                <div class="row">
+                                    <div class="col-xs-6">
+                                        <p>Blutdruck</p>
+                                    </div>
+                                    <div class="col-xs-6">
+                                        <p>zu tief</p>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href class="list-group-item">
+                                <div class="row">
+                                    <div class="col-xs-6">
+                                        <p>Cholesterin</p>
+                                    </div>
+                                    <div class="col-xs-6">
+                                        <p>Homer Simpson!</p>
+                                    </div>
+                                </div>
+                            </a>
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+
+
     </div>
+
 </div>
 
 <!-- Placed at the end of the document so the pages load faster -->
