--- a/dev/index.html
+++ b/dev/index.html
@@ -38,8 +38,9 @@
 </div>
 <div class="container-fluid">
     <div class="row-fluid">
-        <div class="col-sm-8 treatments" ng-class="[marginSetting, fontSetting]" ng-controller="MainController as vm">
+        <div class="col-sm-8 treatments" ng-class="[vm.user.margins, vm.user.fontSize]" ng-controller="MainController as vm">
             <div class="panel panel-default">
+                <pre>{{vm.user|json}}</pre>
 
                 <treatment-toolbar></treatment-toolbar>
 
