made some style changes

--- a/js/treatment/treatment.tpl.html
+++ b/js/treatment/treatment.tpl.html
@@ -91,7 +91,7 @@
 
 
 <div class="col-xs-2">
-    <div class="dropdown" toggle-focus dropdown>
+    <div class="dropdown case-dropdown" toggle-focus dropdown>
         <a class="btn btn-default dropdown-toggle" dropdown-toggle>
             {{'CASE_SHORTHAND' | translate}}: {{treatment.invoiceCase.name ? treatment.invoiceCase.name : '???' }}
         </a>
