--- a/dev/index.html
+++ b/dev/index.html
@@ -57,6 +57,7 @@
 
                 <treatment treatment="treatment" editable="{{false && (!currentPage || currentPage<2) }}"
                            index="{{$index}}"
+                           ng-class="{'editable': treatment.editable===true}"
                            ng-repeat="treatment in vm.filteredTreatments = (vm.treatments |
                             filter:vm.search.text |
                             filter:{subject:vm.search.subject} |
