Inserted Medilist first draft

--- a/dev/index.html
+++ b/dev/index.html
@@ -93,19 +93,129 @@
         <div class="col-sm-4 sidebar">
             <div class="row">
                 <div class="col-sm-12">
-                    <div class="panel panel-primary ">
-                        <div class="panel-heading">
-                            <h4>Medi-Liste</h4>
-                        </div>
-                        <div class="list-group">
-                            <a href class="list-group-item">Ein Medi</a>
-                            <a href class="list-group-item">Ein anderes Medi</a>
-                            <a href class="list-group-item">Ein drittes Medi</a>
 
+
+
+
+
+
+
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading"><h3>Mediplan</h3></div>
+                        <div class="panel-body">
+                            <!--<table class="table table-hover" style="border-collapse:collapse;">-->
+                            <table class="table table-hover">
+
+                                <thead>
+
+                                <thead><tr>
+                                    <th>Medikament</th>
+                                    <th>Einnahme</th>
+                                    <th>Indikation</th>
+                                    <th>von / bis</th>
+                                </tr>
+                                </thead>
+
+
+                                <tbody>
+                                <!--<tr data-toggle="collapse" data-target="#demo1" class="accordion-toggle">-->
+                                <tr data-toggle="collapse" data-target="#demo1">
+                                    <td>Panadol</td>
+                                    <td>0-1-0-1</td>
+                                    <td>Schmerzen</td>
+                                    <td>1.7.15 bis auf weiteres</td>
+
+                                </tr>
+                                <tr>
+                                    <!--<td colspan="12" class="hiddenRow"><div class="accordian-body collapse" id="demo1">-->
+                                    <td colspan="12"><div class="accordian-body collapse" id="demo1">
+                                        <table class="table table-striped">
+
+                                            <tr>
+                                                <td>Panadol</td>
+                                                <td>0-0-0-1</td>
+                                                <td>Schmerzen</td>
+                                                <td>1.7.15 bis auf weiteres</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Panadol</td>
+                                                <td>0-0-0-1</td>
+                                                <td>Schmerzen</td>
+                                                <td>2.6.15 bis auf weiteres</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Panadol Generika</td>
+                                                <td>0-2-0-1</td>
+                                                <td>Schmerzen</td>
+                                                <td>1.4.15 bis auf weiteres</td>
+                                            </tr>
+
+                                        </table>
+
+                                    </div> </td>
+                                </tr>
+                                <tr data-toggle="collapse" data-target="#demo2" class="accordion-toggle">
+                                    <td>Mebuphen</td>
+                                    <td>0-1-0-1</td>
+                                    <td>Stinken</td>
+                                    <td>1.7.15 bis auf weiteres</td>
+
+                                </tr>
+                                <tr>
+                                    <td colspan="12" class="hiddenRow"><div class="accordian-body collapse" id="demo2">
+                                        <table class="table">
+
+                                            <tr>
+                                                <td>Mebuphen</td>
+                                                <td>0-0-0-1</td>
+                                                <td>Stinken</td>
+                                                <td>1.7.15 bis auf weiteres</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Mebuphen</td>
+                                                <td>0-0-0-1</td>
+                                                <td>Stinken</td>
+                                                <td>2.6.15 bis auf weiteres</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Mebuphen Generika</td>
+                                                <td>0-2-0-1</td>
+                                                <td>Stinken</td>
+                                                <td>1.4.15 bis auf weiteres</td>
+                                            </tr>
+
+                                        </table>
+
+                                    </div> </td>
+                                </tr>
+                                </tbody>
+                            </table>
                         </div>
+
+
                     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
                 </div>
             </div>
+
+
+
+
+
+
             <div class="row">
                 <div class="col-sm-12">
                     <div class="panel panel-info">
