--- a/dev/index.html
+++ b/dev/index.html
@@ -92,128 +92,16 @@
         </div>
         <div class="col-sm-4 sidebar">
             <div class="row">
-                <div class="col-sm-12">
-
-
-
-
-
-
-
-
+                <div class="col-sm-12" ng-controller="MedicationController as vm">
                     <div class="panel panel-default">
-                        <div class="panel-heading"><h3>Mediplan</h3></div>
-                        <div class="panel-body">
-                            <!--<table class="table table-hover" style="border-collapse:collapse;">-->
-                            <table class="table table-hover">
-
-                                <thead>
-
-                                <thead><tr>
-                                    <th>Medikament</th>
-                                    <th>Einnahme</th>
-                                    <th>Indikation</th>
-                                    <th>von / bis</th>
-                                </tr>
-                                </thead>
-
-
-                                <tbody>
-                                <!--<tr data-toggle="collapse" data-target="#demo1" class="accordion-toggle">-->
-                                <tr data-toggle="collapse" data-target="#demo1">
-                                    <td>Panadol</td>
-                                    <td>0-1-0-1</td>
-                                    <td>Schmerzen</td>
-                                    <td>1.7.15 bis auf weiteres</td>
-
-                                </tr>
-                                <tr>
-                                    <!--<td colspan="12" class="hiddenRow"><div class="accordian-body collapse" id="demo1">-->
-                                    <td colspan="12"><div class="accordian-body collapse" id="demo1">
-                                        <table class="table table-striped">
-
-                                            <tr>
-                                                <td>Panadol</td>
-                                                <td>0-0-0-1</td>
-                                                <td>Schmerzen</td>
-                                                <td>1.7.15 bis auf weiteres</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Panadol</td>
-                                                <td>0-0-0-1</td>
-                                                <td>Schmerzen</td>
-                                                <td>2.6.15 bis auf weiteres</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Panadol Generika</td>
-                                                <td>0-2-0-1</td>
-                                                <td>Schmerzen</td>
-                                                <td>1.4.15 bis auf weiteres</td>
-                                            </tr>
-
-                                        </table>
-
-                                    </div> </td>
-                                </tr>
-                                <tr data-toggle="collapse" data-target="#demo2" class="accordion-toggle">
-                                    <td>Mebuphen</td>
-                                    <td>0-1-0-1</td>
-                                    <td>Stinken</td>
-                                    <td>1.7.15 bis auf weiteres</td>
-
-                                </tr>
-                                <tr>
-                                    <td colspan="12" class="hiddenRow"><div class="accordian-body collapse" id="demo2">
-                                        <table class="table">
-
-                                            <tr>
-                                                <td>Mebuphen</td>
-                                                <td>0-0-0-1</td>
-                                                <td>Stinken</td>
-                                                <td>1.7.15 bis auf weiteres</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Mebuphen</td>
-                                                <td>0-0-0-1</td>
-                                                <td>Stinken</td>
-                                                <td>2.6.15 bis auf weiteres</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Mebuphen Generika</td>
-                                                <td>0-2-0-1</td>
-                                                <td>Stinken</td>
-                                                <td>1.4.15 bis auf weiteres</td>
-                                            </tr>
-
-                                        </table>
-
-                                    </div> </td>
-                                </tr>
-                                </tbody>
-                            </table>
-                        </div>
-
-
+                        <ul class="list-group">
+                            <li class="list-group-item" ng-repeat="medication in vm.medicationList">
+                                {{medication.name}}
+                            </li>
+                        </ul>
                     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
                 </div>
             </div>
-
-
-
-
 
 
             <div class="row">
@@ -296,6 +184,7 @@
 
 <script type="text/javascript" src="../js/controllers/main.controller.js"></script>
 <script type="text/javascript" src="../js/controllers/modal.controllers.js"></script>
+<script type="text/javascript" src="../js/controllers/medication.controller.js"></script>
 
 <script type="text/javascript" src="../js/directives/advanced-search-widget.directive.js"></script>
 <script type="text/javascript" src="../js/treatment/treatment.directive.js"></script>
