added a sidebar for the treatments

--- a/dev/index.html
+++ b/dev/index.html
@@ -38,7 +38,8 @@
 </div>
 <div class="container-fluid">
     <div class="row-fluid">
-        <div class="col-sm-8 treatments" ng-class="[vm.user.margins, vm.user.fontSize]" ng-controller="MainController as vm">
+        <div class="col-sm-8 treatments" ng-class="[vm.user.margins, vm.user.fontSize]"
+             ng-controller="MainController as vm">
             <div class="panel panel-default">
 
                 <treatment-toolbar></treatment-toolbar>
@@ -55,10 +56,15 @@
 
                 <preset-settings-widget></preset-settings-widget>
 
-                <treatment treatment="treatment" editable="{{false && (!currentPage || currentPage<2) }}"
-                           index="{{$index}}"
-                           ng-class="{'editable': treatment.editable===true}"
-                           ng-repeat="treatment in vm.filteredTreatments = (vm.treatments |
+                <div class="row">
+
+                    <div class="treatments-container col-sm-12">
+
+
+                        <treatment treatment="treatment" editable="{{false && (!currentPage || currentPage<2) }}"
+                                   index="{{$index}}"
+                                   ng-class="{'editable': treatment.editable===true}"
+                                   ng-repeat="treatment in vm.filteredTreatments = (vm.treatments |
                             filter:vm.search.text |
                             filter:{subject:vm.search.subject} |
                             filter:{userToken:vm.search.user} |
@@ -69,24 +75,74 @@
                             attachments:vm.search.attachments |
                             orderBy:[(vm.reverse?'':'-')+'date', 'id']) |
                             limitTo:vm.limit:(currentPage? vm.limit*(currentPage-1) : 0) "
-                           treatmentlist="vm.treatments" user="::vm.user"></treatment>
+                                   treatmentlist="vm.treatments" user="::vm.user"></treatment>
 
 
-                <div class="row">
+                        <div class="row">
 
-                    <div class="col-xs-12 centered" ng-hide="vm.limit == vm.filteredTreatments.length || !vm.filteredTreatments"
-                         ng-cloak>
-                        <div class="panel">
+                            <div class="col-xs-12 centered"
+                                 ng-hide="vm.limit == vm.filteredTreatments.length || !vm.filteredTreatments"
+                                 ng-cloak>
+                                <div class="panel">
+                                    <div class="panel-body">
+                                        <div class="btn-group">
+                                            <pagination total-items="vm.filteredTreatments.length"
+                                                        items-per-page="vm.limit"
+                                                        ng-model="currentPage" ng-change="pageChanged()"></pagination>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="treatment-sidebar">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                Hello
+                            </div>
                             <div class="panel-body">
-                                <div class="btn-group">
-                                    <pagination total-items="vm.filteredTreatments.length" items-per-page="vm.limit"
-                                                ng-model="currentPage" ng-change="pageChanged()"></pagination>
+                                <div class="type-and-preset" type-and-preset>
+                                    <div class="row">
+                                        <div class="col-xs-12">
+                                            <div class="form-group">
+                                                <input class="form-control type-and-preset-search"
+                                                       placeholder="{{'TYPE_AND_PRESET_PLACEHOLDER' | translate}}"
+                                                       ng-model="search.term">
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-xs-12">
+                                                    <div class="type-and-preset-list">
+                                                        <div class="list-group">
+                                                            <h5 class="list-group-item entry-type">{{'ENTRY_TYPES' | translate}}</h5>
+                                                            <a tabindex href
+                                                               ng-click="dc.addEntry(treatment.id, type, treatment.entries); search.term=''"
+                                                               ng-repeat="type in vm.types | filter:search.term"
+                                                               class="list-group-item entry-type"
+                                                               ng-class="::'level-' + (type.level ? type.level : '1' ) ">
+                                                                {{::type.name}}
+                                                            </a>
+                                                            <hr>
+                                                            <h5 class="list-group-item preset">{{'PRESETS' | translate}}</h5>
+                                                            <a tabindex href
+                                                               class="list-group-item preset"
+                                                               ng-click="dc.addPreset(treatment.id, preset, treatments); search.term=''"
+                                                               ng-repeat="preset in vm.presets | filter:search.term">
+                                                                {{::preset.name}}
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-
                     </div>
                 </div>
+
+
             </div>
 
 
