--- a/dev/index.html
+++ b/dev/index.html
@@ -36,10 +36,10 @@
         </div>
     </div>
 </div>
-<div class="container-fluid">
+<div class="container-fluid" key-event ng-controller="MainController as vm">
     <div class="row-fluid">
-        <div class="col-sm-11 col-md-8 treatments" ng-class="[vm.user.margins, vm.user.fontSize]"
-             ng-controller="MainController as vm">
+        <div class="col-sm-11 col-md-9 treatments" ng-class="[vm.user.margins, vm.user.fontSize]">
+
             <div class="panel panel-default">
 
                 <treatment-toolbar></treatment-toolbar>
@@ -56,15 +56,18 @@
 
                 <preset-settings-widget></preset-settings-widget>
 
-                <div class="row">
+                <div class="row limit-height">
+                    <div class="col-sm-12 limit-height">
+                        <div class="row limit-height">
 
-                    <div class="treatments-container col-sm-12">
+                            <div class="treatments-container col-sm-12 col-md-9">
 
 
-                        <treatment treatment="treatment" editable="{{false && (!currentPage || currentPage<2) }}"
-                                   index="{{$index}}"
-                                   ng-class="{'editable': treatment.editable===true}"
-                                   ng-repeat="treatment in vm.filteredTreatments = (vm.treatments |
+                                <treatment treatment="treatment"
+                                           editable="{{false && (!currentPage || currentPage<2) }}"
+                                           index="{{$index}}"
+                                           ng-class="{'editable': treatment.editable===true}"
+                                           ng-repeat="treatment in vm.filteredTreatments = (vm.treatments |
                             filter:vm.search.text |
                             filter:{subject:vm.search.subject} |
                             filter:{userToken:vm.search.user} |
@@ -75,71 +78,48 @@
                             attachments:vm.search.attachments |
                             orderBy:[(vm.reverse?'':'-')+'date', 'id']) |
                             limitTo:vm.limit:(currentPage? vm.limit*(currentPage-1) : 0) "
-                                   treatmentlist="vm.treatments" user="::vm.user"></treatment>
+                                           treatmentlist="vm.treatments" user="::vm.user"></treatment>
 
 
-                        <div class="row">
+                                <div class="row">
 
-                            <div class="col-xs-12 centered"
-                                 ng-hide="vm.limit == vm.filteredTreatments.length || !vm.filteredTreatments"
-                                 ng-cloak>
-                                <div class="panel">
-                                    <div class="panel-body">
-                                        <div class="btn-group">
-                                            <pagination total-items="vm.filteredTreatments.length"
-                                                        items-per-page="vm.limit"
-                                                        ng-model="currentPage" ng-change="pageChanged()"></pagination>
-                                        </div>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-                    <div class="treatment-sidebar">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                Hello
-                            </div>
-                            <div class="panel-body">
-                                <div class="type-and-preset" type-and-preset>
-                                    <div class="row">
-                                        <div class="col-xs-12">
-                                            <div class="form-group">
-                                                <input class="form-control type-and-preset-search"
-                                                       placeholder="{{'TYPE_AND_PRESET_PLACEHOLDER' | translate}}"
-                                                       ng-model="search.term">
-                                            </div>
-                                            <div class="row">
-                                                <div class="col-xs-12">
-                                                    <div class="type-and-preset-list">
-                                                        <div class="list-group">
-                                                            <h5 class="list-group-item entry-type">{{'ENTRY_TYPES' | translate}}</h5>
-                                                            <a tabindex href
-                                                               ng-click="dc.addEntry(treatment.id, type, treatment.entries); search.term=''"
-                                                               ng-repeat="type in vm.types | filter:search.term"
-                                                               class="list-group-item entry-type"
-                                                               ng-class="::'level-' + (type.level ? type.level : '1' ) ">
-                                                                {{::type.name}}
-                                                            </a>
-                                                            <hr>
-                                                            <h5 class="list-group-item preset">{{'PRESETS' | translate}}</h5>
-                                                            <a tabindex href
-                                                               class="list-group-item preset"
-                                                               ng-click="dc.addPreset(treatment.id, preset, treatments); search.term=''"
-                                                               ng-repeat="preset in vm.presets | filter:search.term">
-                                                                {{::preset.name}}
-                                                            </a>
-                                                        </div>
-                                                    </div>
+                                    <div class="col-xs-12 centered"
+                                         ng-hide="vm.limit == vm.filteredTreatments.length || !vm.filteredTreatments"
+                                         ng-cloak>
+                                        <div class="panel">
+                                            <div class="panel-body">
+                                                <div class="btn-group">
+                                                    <pagination total-items="vm.filteredTreatments.length"
+                                                                items-per-page="vm.limit"
+                                                                ng-model="currentPage"
+                                                                ng-change="pageChanged()"></pagination>
                                                 </div>
                                             </div>
                                         </div>
+
                                     </div>
+                                </div>
+                            </div>
+                            <div class="hidden-xs hidden-sm col-md-3">
+                                <div class="panel panel-primary">
+                                    <div class="panel-heading">
+                                        Menu
+                                    </div>
+                                    <type-and-preset-widget></type-and-preset-widget>
+                                </div>
+
+                            </div>
+                            <div class="hidden-md hidden-lg">
+                                <div ng-show="vm.showTypeAndPresetWidget" achilles-widget
+                                     widget-width="300"
+                                     widget-position-right="10"
+                                     widget-position="absolute">
+                                    <type-and-preset-widget></type-and-preset-widget>
                                 </div>
                             </div>
                         </div>
                     </div>
+
                 </div>
 
 
@@ -149,7 +129,8 @@
         </div>
         <div class="col-sm-1 hidden-md hidden-lg">
             <div class="btn-group">
-                <a class="btn btn-default" id="show-medication-widget" ng-click="vm.showMedicationWidget=!vm.showMedicationWidget">M</a>
+                <a class="btn btn-default" id="show-medication-widget"
+                   ng-click="vm.showMedicationWidget=!vm.showMedicationWidget">M</a>
             </div>
             <div class="btn-group">
                 <a class="btn btn-danger">B</a>
@@ -157,14 +138,17 @@
             <div class="btn-group">
                 <a class="btn btn-info">L</a>
             </div>
+            <div class="btn-group">
+                <a class="btn btn-info" ng-click="vm.showTypeAndPresetWidget = !vm.showTypeAndPresetWidget">T&P</a>
+            </div>
             <div achilles-widget
                  widget-width="30%"
-                 widget-align-element="#show-medication-widget"
-                 ng-show="vm.showMedicationWidget">
+                 widget-align-to-element="#show-medication-widget"
+                 ng-show="vm.showMedicationWidget || false">
                 <medication-widget></medication-widget>
             </div>
         </div>
-        <div class="col-md-4 hidden-sm hidden-xs sidebar">
+        <div class="col-md-3 hidden-sm hidden-xs sidebar">
             <div class="row">
                 <div class="col-sm-12">
                     <medication-widget></medication-widget>
@@ -264,10 +248,11 @@
 <script type="text/javascript" src="../js/directives/title-settings-widget.directive.js"></script>
 <script type="text/javascript" src="../js/directives/draggable.directive.js"></script>
 <script type="text/javascript" src="../js/directives/textblock-widget.directive.js"></script>
-<script type="text/javascript" src="../js/directives/type-and-preset.directive.js"></script>
+<script type="text/javascript" src="../js/directives/type-and-preset-widget.directive.js"></script>
 <script type="text/javascript" src="../js/directives/keyboard-focus.directive.js"></script>
 <script type="text/javascript" src="../js/directives/restricted-scroll.directive.js"></script>
 <script type="text/javascript" src="../js/directives/validation.directive.js"></script>
+<script type="text/javascript" src="../js/directives/key-event.directive.js"></script>
 
 <script type="text/javascript" src="../js/services/advanced-search-widget.service.js"></script>
 <script type="text/javascript" src="../js/services/asterisk-search.service.js"></script>
